# transduction

./: .coveragerc  .gitignore  .pylintrc  CLAUDE.md  Digraph.gv  Notes.ipynb  Peekaboo.ipynb  README.md  Recursive-DFA-decomposition.ipynb  Rust.ipynb  TIMV.md  TODO.md  Towards-Recursive.ipynb  algs.py  lemma.ipynb  pyrightconfig.json  setup.py  smc.ipynb  smc_sampling.ipynb  test_algs.py
benchmark/: analyze_ptb.ipynb  profile_transduced.py  run.py  run_ptb.py
benchmarking/: algorithm.py  data.py  run.py
crates/transduction-core/: Cargo.toml  pyproject.toml
crates/transduction-core/src/: decompose.rs  fst.rs  incremental.rs  lazy_precover.rs  lib.rs  minimize.rs  peekaboo.rs  position_set_peekaboo.rs  powerset.rs  precover.rs  py.rs  rho.rs  token_decompose.rs  token_peekaboo.rs
examples/: hello_world.py  tutorial.ipynb
experimental/: cdrewrite.py  test_cdrewrite.py
notebooks/: compiled_beam_regions.ipynb  demo_transduced_lm.ipynb  llama_cpp_demo.ipynb  ptb_diff.ipynb  ptb_functionality.ipynb
notes/: BPE-monster-machine.ipynb  Benchmarking.ipynb  Finiteness.ipynb  LM.ipynb  More-Examples.ipynb  Notes.ipynb  PTB-Analysis.ipynb  Peekaboo-Nonrecursive.ipynb  Peekaboo-Recursive.ipynb  Recursive-DFA-decomposition.ipynb  Relations.ipynb  SMC-dna-to-aa.ipynb  Towards-Recursive.ipynb  UniversalityFilter-Tests.ipynb  analyze_ptb.ipynb  bpe-lm-benchmark.ipynb  carry-forward-prefix-invariant.md  character_beam.ipynb  demo_transduced_lm.ipynb  incremental_scaling.ipynb  lazy-precover-dfa-tutorial.ipynb  measure_powerset.py  ngram_demo.ipynb  precover-rho-demo.ipynb  prefetch_demo.ipynb  ptb-lm-benchmark.ipynb  ptb_diff.ipynb  run_ptb.py  safety-demo.ipynb  strip-think-tags.ipynb  symbolic_precover_demo.py  test-fst-briefing.ipynb  transduced-lm-benchmark.ipynb  (+2 more)
openfst/: CMakeLists.txt  pyproject.toml  setup.py
openfst/cython/: _openfst_decomp.pxd
openfst/src/: decompose.cc  decompose.h  dirty_peekaboo.cc  dirty_peekaboo.h  fst_convert.cc  fst_convert.h  lazy_dfa.cc  lazy_dfa.h  peekaboo_fst.cc  peekaboo_fst.h  peekaboo_universality.h  powerset.h  precover_fst.cc  precover_fst.h  universality.cc  universality.h
(+200 files in other folders)
